[ADD]: update career page ui, add redirect mail link on form

--- a/pages/career.html
+++ b/pages/career.html
@@ -41,13 +41,20 @@
       </nav>
       f
       <div class="hero-content">
-        <h1>About Yantrickaa</h1>
+        <h1>Careers at Yantrikaa</h1>
         <p>
-          Yantrikaa is a global consulting firm that partners with leaders in
-          business and society to tackle their most important challenges and
-          capture their greatest opportunities.
+          We offer a comprehensive range of technology services to help your
+          business thrive in the digital age.
         </p>
-        <a href="#" class="btn">View video</a>
+        <div class="search-bar">
+          <input
+            type="text"
+            placeholder="Search Positions, Location, technology"
+          />
+          <button>
+            <span>Search</span><i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </div>
       </div>
     </header>
     <main>
@@ -76,28 +83,36 @@
                 the solution.
               </li>
             </ul>
-            <button class="apply-btn">Apply →</button>
+            <div class="card-footer">
+              <button class="apply-btn">Apply</button>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
           </div>
 
           <div class="career-card">
-            <h3>Flutter Developer (Mobile)</h3>
-            <p><strong>Experience:</strong> 0–2 Years.</p>
-            <p><strong>Key Skills:</strong> Flutter.</p>
-            <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
-            <p><strong>Description:</strong></p>
-            <ul>
-              <li>
-                Works with QA CoE team on defining the QA framework and its
-                components.
-              </li>
-              <li>
-                Provides the means and measures for testing all aspects of the
-                product – both functionally and technically, as well as in terms
-                of usability and user experience – to meet all requirements of
-                the solution.
-              </li>
-            </ul>
-            <button class="apply-btn">Apply →</button>
+            <div>
+              <h3>Flutter Developer (Mobile)</h3>
+              <p><strong>Experience:</strong> 0–2 Years.</p>
+              <p><strong>Key Skills:</strong> Flutter.</p>
+              <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
+              <p><strong>Description:</strong></p>
+              <ul>
+                <li>
+                  Works with QA CoE team on defining the QA framework and its
+                  components.
+                </li>
+                <li>
+                  Provides the means and measures for testing all aspects of the
+                  product – both functionally and technically, as well as in
+                  terms of usability and user experience – to meet all
+                  requirements of the solution.
+                </li>
+              </ul>
+            </div>
+            <div class="card-footer">
+              <button class="apply-btn">Apply</button>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
           </div>
 
           <div class="career-card">
@@ -120,49 +135,64 @@
                 the solution.
               </li>
             </ul>
-            <button class="apply-btn">Apply →</button>
+            <div class="card-footer">
+              <button class="apply-btn">Apply</button>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
           </div>
 
           <div class="career-card">
-            <h3>Web Developer Intern</h3>
-            <p><strong>Experience:</strong> 0–2 Years.</p>
-            <p><strong>Key Skills:</strong> TypeScript, JavaScript, NodeJS.</p>
-            <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
-            <p><strong>Description:</strong></p>
-            <ul>
-              <li>
-                Works with QA CoE team on defining the QA framework and its
-                components.
-              </li>
-              <li>
-                Provides the means and measures for testing all aspects of the
-                product – both functionally and technically, as well as in terms
-                of usability and user experience – to meet all requirements of
-                the solution.
-              </li>
-            </ul>
-            <button class="apply-btn">Apply →</button>
+            <div>
+              <h3>Web Developer Intern</h3>
+              <p><strong>Experience:</strong> 0–2 Years.</p>
+              <p>
+                <strong>Key Skills:</strong> TypeScript, JavaScript, NodeJS.
+              </p>
+              <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
+              <p><strong>Description:</strong></p>
+              <ul>
+                <li>
+                  Works with QA CoE team on defining the QA framework and its
+                  components.
+                </li>
+                <li>
+                  Provides the means and measures for testing all aspects of the
+                  product – both functionally and technically, as well as in
+                  terms of usability and user experience – to meet all
+                  requirements of the solution.
+                </li>
+              </ul>
+            </div>
+            <div class="card-footer">
+              <button class="apply-btn">Apply</button>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
           </div>
 
           <div class="career-card">
-            <h3>UI/UX & Graphics Designer</h3>
-            <p><strong>Experience:</strong> 0–2 Years.</p>
-            <p><strong>Key Skills:</strong> Flutter.</p>
-            <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
-            <p><strong>Description:</strong></p>
-            <ul>
-              <li>
-                Works with QA CoE team on defining the QA framework and its
-                components.
-              </li>
-              <li>
-                Provides the means and measures for testing all aspects of the
-                product – both functionally and technically, as well as in terms
-                of usability and user experience – to meet all requirements of
-                the solution.
-              </li>
-            </ul>
-            <button class="apply-btn">Apply →</button>
+            <div>
+              <h3>UI/UX & Graphics Designer</h3>
+              <p><strong>Experience:</strong> 0–2 Years.</p>
+              <p><strong>Key Skills:</strong> Flutter.</p>
+              <p><strong>Location:</strong> Nagpur, India. (WFH)</p>
+              <p><strong>Description:</strong></p>
+              <ul>
+                <li>
+                  Works with QA CoE team on defining the QA framework and its
+                  components.
+                </li>
+                <li>
+                  Provides the means and measures for testing all aspects of the
+                  product – both functionally and technically, as well as in
+                  terms of usability and user experience – to meet all
+                  requirements of the solution.
+                </li>
+              </ul>
+            </div>
+            <div class="card-footer">
+              <button class="apply-btn">Apply</button>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
           </div>
 
           <div class="career-card">
@@ -185,7 +215,10 @@
                 the solution.
               </li>
             </ul>
-            <button class="apply-btn">Apply →</button>
+            <div class="card-footer">
+              <button class="apply-btn">Apply</button>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
           </div>
         </div>
       </section>
@@ -217,40 +250,86 @@
           </ul>
         </div>
 
-        <form class="career-form">
+        <form
+          action="https://formsubmit.co/ee59437ddc10992cbd1b6cd485e05ffe"
+          method="POST"
+          enctype="multipart/form-data"
+        >
+          <input type="hidden" name="_subject" value="New Job Application" />
+          <input type="hidden" name="_captcha" value="false" />
+          <input type="hidden" name="_template" value="table" />
+          <input
+            type="hidden"
+            name="_autoresponse"
+            value="You have received a new application. Details are below:"
+          />
+
           <div class="form-row">
             <div class="form-group">
               <label>First Name</label>
-              <input type="text" placeholder="First Name" />
+              <input
+                name="FirstName"
+                title="First name is required"
+                type="text"
+                required
+                placeholder="First Name"
+              />
             </div>
             <div class="form-group">
               <label>Last Name</label>
-              <input type="text" placeholder="Last Name" />
+              <input
+                name="LastName"
+                type="text"
+                placeholder="Last Name"
+                required
+                title="Last name is required"
+              />
             </div>
           </div>
 
           <div class="form-row">
             <div class="form-group">
               <label>Email</label>
-              <input type="email" placeholder="name@gmail.com" />
+              <input
+                name="Email"
+                type="email"
+                required
+                placeholder="name@gmail.com"
+              />
             </div>
           </div>
 
           <div class="form-row">
             <div class="form-group">
               <label>Contact No</label>
-              <input type="text" placeholder="Number 1" />
+              <input
+                name="Mobile"
+                minlength="10"
+                maxlength="10"
+                type="number"
+                placeholder="Number 1"
+                required
+                title="Number must be 10 digits"
+              />
             </div>
             <div class="form-group">
               <label>Whatsapp No</label>
-              <input type="text" placeholder="Number 2" />
+              <input
+                name="WhatsappNumber"
+                minlength="10"
+                maxlength="10"
+                type="number"
+                placeholder="Number 2"
+                required
+                title="Number must be 10 digits"
+              />
             </div>
           </div>
 
           <div class="form-row">
             <div class="form-group">
               <label>Education</label>
-              <select>
+              <select name="Education" required>
                 <option>UnderGrad / MBA</option>
                 <option>BTech</option>
                 <option>MTech</option>
@@ -258,7 +337,7 @@
             </div>
             <div class="form-group">
               <label>Yrs of Exp</label>
-              <select>
+              <select name="Experience" required>
                 <option>Fresher / 2+ Years exp</option>
                 <option>3-5 Years</option>
                 <option>5+ Years</option>
@@ -269,21 +348,31 @@
           <div class="form-row">
             <div class="form-group full-width">
               <label>Resume/CV</label>
-              <input type="file" />
+              <input name="Resume" type="file" required />
             </div>
           </div>
 
           <div class="form-row">
             <div class="form-group full-width">
               <label>Note</label>
-              <textarea placeholder="Upload your Resume"></textarea>
+              <textarea
+                name="Note"
+                placeholder="Upload your Resume"
+                required
+              ></textarea>
             </div>
           </div>
 
-          <div class="form-row checkbox-row">
-            <input type="checkbox" id="agree" />
-            <label for="agree"
-              >I have read and Agree to all the terms and conditions.</label
+          <div class="checkbox-row">
+            <input
+              name="read-term-conditions"
+              type="checkbox"
+              id="agree"
+              style="width: fit-content"
+              required
+            />
+            <label for="agree">
+              I have read and Agree to all the terms and conditions.</label
             >
           </div>
 
@@ -324,7 +413,7 @@
 
           <div class="footer-buttons">
             <button class="country-btn">IND 🇮🇳 ▼</button>
-            <button class="contact-btn">Contact Us →</button>
+            <button class="contact-btn">Contact Us</button>
           </div>
         </div>
       </div>
