--- a/pages/service.html
+++ b/pages/service.html
@@ -6,7 +6,7 @@
     <title>service</title>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="stylesheet" href="../css/about-us/service.css" />
+    <link rel="stylesheet" href="../css/service/qa-section.css" />
     <link rel="stylesheet" href="../css/about-us/tech.css" />
     <link rel="stylesheet" href="../css/about-us/success.css" />
 
