--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -12,15 +12,13 @@
 
       <h2>1. Introduction</h2>
       <p>
-        [Your Company Name] (“Company”, “we”, “our”, “us”) respects your privacy
-        and is committed to protecting the personal information you share with
-        us.
+        Yantrickaa and our entire team respects your privacy and is committed to
+        protecting the personal information you share with us.
       </p>
       <p>
         This Privacy Policy explains how we collect, use, disclose, and
-        safeguard your information when you visit our website
-        (www.yourdomain.com), use our software products, or engage our IT
-        services.
+        safeguard your information when you visit our website use our software
+        products, or engage our IT services.
       </p>
       <p>
         By using our website or services, you agree to the terms of this Privacy
