[ADD]: action link in contact form

--- a/pages/career.html
+++ b/pages/career.html
@@ -260,7 +260,7 @@
           <input type="hidden" name="_template" value="table" />
           <input
             type="hidden"
-            name="_autoresponse"
+            name="_message"
             value="You have received a new application. Details are below:"
           />
 
