[FIX]: contactForm bacground image path

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
       <!-- out presence worldwide  -->
 
-      <section class="presence-worldwide">
+      <section class="presence-worldwide" id="worldwide-presence">
         <h2>Our Presence Worldwide</h2>
         <p>
           Our Presence Worldwide Our Presence Worldwide Our Presence Worldwide
