--- a/pages/career.html
+++ b/pages/career.html
@@ -348,7 +348,7 @@
           <div class="form-row">
             <div class="form-group full-width">
               <label>Resume/CV</label>
-              <input name="Resume" type="file" required />
+              <input name="Resume" type="file" />
             </div>
           </div>
 
