Changed images, Contents

--- a/pages/career.html
+++ b/pages/career.html
@@ -41,7 +41,7 @@
       </nav>
       f
       <div class="hero-content">
-        <h1>Careers at Yantrikaa</h1>
+        <h1>Careers at Dealintra</h1>
         <p>
           We offer a comprehensive range of technology services to help your
           business thrive in the digital age.
@@ -225,7 +225,7 @@
       <hr />
       <section class="career-apply-section">
         <div class="job-title">
-          <h2>Full Stack Web Developer at Yantrikaa <span>↗</span></h2>
+          <h2>Full Stack Web Developer at Dealintra <span>↗</span></h2>
           <div class="job-tags">
             <span>Experience: 0-2 Years.</span>
             <span>Location: Nagpur, India. (WFH)</span>
@@ -422,7 +422,7 @@
 
       <div class="footer-bottom">
         <div class="footer-brand">
-          <h2>Yantrikaa</h2>
+          <h2>Dealintra</h2>
           <div class="footer-right">
             <div class="footer-links-center">
               <a href="privacy-policy.html">Privacy Policy</a>
@@ -470,7 +470,7 @@
             Federal No Surprises Bill Act Disclosure.
           </p>
 
-          <p class="copyright">© 2025 Yantrikaa Infotech Pvt Ltd</p>
+          <p class="copyright">© 2025 Dealintra Infotech Pvt Ltd</p>
         </div>
       </div>
     </footer>
