--- a/pages/service.html
+++ b/pages/service.html
@@ -503,7 +503,7 @@
 
       <div class="footer-bottom">
         <div class="footer-brand">
-          <h2>Yantrikaa</h2>
+          <h2>Dealintra</h2>
           <div class="footer-right">
             <div class="footer-links-center">
               <a href="privacy-policy.html">Privacy Policy</a>
@@ -551,7 +551,7 @@
             Federal No Surprises Bill Act Disclosure.
           </p>
 
-          <p class="copyright">© 2025 Yantrikaa Infotech Pvt Ltd</p>
+          <p class="copyright">© 2025 Dealintra Infotech Pvt Ltd</p>
         </div>
       </div>
     </footer>
