--- a/pages/product.html
+++ b/pages/product.html
@@ -66,9 +66,9 @@
           <!-- CARD 1 -->
           <div class="product-card">
             <div class="product-img">
-              <img src="../assets/images/product/pos.png" alt="POSware Logo" />
+              <img src="../assets/images/product/Dealinpos1.png" alt="DealinPOS Logo" />
             </div>
-            <h3>YantrikaPOS</h3>
+            <h3>DealintraPOS</h3>
             <p class="subtitle">POS & Restaurant Management System.</p>
             <p class="details">
               DPOS is Point of sale software that manages Staff, Inventory,
@@ -80,10 +80,10 @@
           <!-- CARD 2 -->
           <div class="product-card">
             <div class="product-img">
-              <img src="../assets/images/product/pos.png" alt="POSware Logo" />
+              <img src="../assets/images/product/Dealindb1.png" alt="DealinDB Logo" />
             </div>
-            <h3>YantrikaPOS</h3>
-            <p class="subtitle">POS & Restaurant Management System.</p>
+            <h3>DealintraDB</h3>
+            <p class="subtitle">Banking & Society Management System.</p>
             <p class="details">
               DPOS is Point of sale software that manages Staff, Inventory,
               Billing and Analytics.
@@ -94,10 +94,10 @@
           <!-- CARD 3 -->
           <div class="product-card">
             <div class="product-img">
-              <img src="../assets/images/product/pos.png" alt="POSware Logo" />
+              <img src="../assets/images/product/portal1.png" alt="PortalLogo" />
             </div>
-            <h3>YantrikaPOS</h3>
-            <p class="subtitle">POS & Restaurant Management System.</p>
+            <h3>Portal</h3>
+            <p class="subtitle">Internship Management System.</p>
             <p class="details">
               DPOS is Point of sale software that manages Staff, Inventory,
               Billing and Analytics.
@@ -141,23 +141,23 @@
         <div class="info-header">
           <div class="left">
             <div class="info-left-text">
-              <h2>YantrikaPOS</h2>
-              <h4>YantrikaPOS - The Future of<br />Point of Sale System.</h4>
+              <h2>DealintraPOS</h2>
+              <h4>DealintraPOS - The Future of<br />Point of Sale System.</h4>
             </div>
             <div class="highlight-box">
-              <h3>Yantrika<span>POS</span></h3>
+              <h3>Dealintra<span>POS</span></h3>
             </div>
           </div>
           <div class="info-image">
             <img
               src="../assets/images/product/posInfo.png"
-              alt="YantrikaPOS System"
+              alt="DealintraPOS System"
             />
           </div>
         </div>
         <div class="text-container">
           <p>
-            YantrikaPOS is designed to streamline retail/restaurant operations,
+            DealintraPOS is designed to streamline retail/restaurant operations,
             providing businesses with the tools they need to manage their
             operations efficiently. LithosPOS integrates with other systems such
             as accounting software, marketing tools, inventory management
@@ -172,7 +172,7 @@
             Deliveroo, GrubHub, and more.
           </p>
 
-          <h3 class="features-title">Key Features of YantrikaPOS</h3>
+          <h3 class="features-title">Key Features of DealintraPOS</h3>
 
           <div class="features-grid">
             <span class="feature">Inventory Management</span>
@@ -194,26 +194,26 @@
         <div class="info-header">
           <div class="left">
             <div class="info-left-text">
-              <h2>YantrikaDB</h2>
-              <h4>YantrikaDB - Society<br />Management & Core Banking</h4>
+              <h2>DealintraDB</h2>
+              <h4>DealintraDB - Society<br />Management & Core Banking</h4>
             </div>
             <div class="highlight-box highlight-box-with-logo">
               <img src="../assets/images/product/db-logo.png" alt="db-logo" />
               <h3 style="color: #333dff; font-weight: 700">
-                Yantrika<span style="color: #fb7500">DB</span>
+                Dealintra<span style="color: #fb7500">DB</span>
               </h3>
             </div>
           </div>
           <div class="info-image">
             <img
               src="../assets/images/product/DBPrensenting.png"
-              alt="YantrikaPOS System"
+              alt="DealintraPOS System"
             />
           </div>
         </div>
         <div class="text-container">
           <p>
-            YantrikaDB is designed to streamline retail/restaurant operations,
+            DealintraDB is designed to streamline retail/restaurant operations,
             providing businesses with the tools they need to manage their
             operations efficiently. LithosPOS integrates with other systems such
             as accounting software, marketing tools, inventory management
@@ -228,7 +228,7 @@
             Deliveroo, GrubHub, and more.
           </p>
 
-          <h3 class="features-title">Key Features of YantrikaDB</h3>
+          <h3 class="features-title">Key Features of DealintraDB</h3>
 
           <div class="features-grid">
             <span id="db-feature" class="feature">Fixed Deposit FD</span>
@@ -261,7 +261,7 @@
             <div class="info-left-text">
               <h2>Portal</h2>
               <h4>
-                YantrikaPOS - The Future<br />
+                DealintraPOS - The Future<br />
                 Of Point of Sale System.
               </h4>
             </div>
@@ -279,13 +279,13 @@
           <div class="info-image">
             <img
               src="../assets/images/product/posInfo.png"
-              alt="YantrikaPOS System"
+              alt="DealintraPOS System"
             />
           </div>
         </div>
         <div class="text-container">
           <p>
-            YantrikaPOS is designed to streamline retail/restaurant operations,
+            DealintraPOS is designed to streamline retail/restaurant operations,
             providing businesses with the tools they need to manage their
             operations efficiently. LithosPOS integrates with other systems such
             as accounting software, marketing tools, inventory management
@@ -300,7 +300,7 @@
             Deliveroo, GrubHub, and more.
           </p>
 
-          <h3 class="features-title">Key Features of YantrikaPOS</h3>
+          <h3 class="features-title">Key Features of DealintraPOS</h3>
 
           <div class="features-grid">
             <span class="feature" id="feature-portal"
@@ -430,7 +430,7 @@
 
       <div class="footer-bottom">
         <div class="footer-brand">
-          <h2>Yantrikaa</h2>
+          <h2>Dealintra</h2>
           <div class="footer-right">
             <div class="footer-links-center">
               <a href="privacy-policy.html">Privacy Policy</a>
@@ -478,7 +478,7 @@
             Federal No Surprises Bill Act Disclosure.
           </p>
 
-          <p class="copyright">© 2025 Yantrikaa Infotech Pvt Ltd</p>
+          <p class="copyright">© 2025 Dealintra Infotech Pvt Ltd</p>
         </div>
       </div>
     </footer>
