--- a/pages/upcoming.html
+++ b/pages/upcoming.html
@@ -56,7 +56,7 @@
     <div class="container">
       <div class="card">
         <h2>Coming Soon...</h2>
-        <p>Work in progres, The section will be available soon.</p>
+        <p>Work in progress, The section will be available soon.</p>
         <a href="../index.html">Go to home</a>
       </div>
     </div>
