[update]:homepage industry section UI on small screen

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="industry-grid">
-          <div class="industry-card" style="background-color: #70e3ff">
+          <div class="industry-card" id="finance-industry" style="background-color: #70e3ff">
             <h3>Finance & Banking</h3>
             <img src="assets/images/home/industry/finance.png" alt="Finance" />
           </div>
