[update]:company name

--- a/pages/service.html
+++ b/pages/service.html
@@ -24,7 +24,7 @@
 
         <div class="logo">
           <img src="../assets/images/logo.png" alt="logo" class="logo-icon" />
-          <h2>Yantrickaa</h2>
+          <h2>Dealintra</h2>
         </div>
 
         <ul class="nav-links" id="sidebar">
@@ -493,7 +493,7 @@
           </p>
 
           <div class="footer-buttons">
-            <button class="country-btn">IND 🇮🇳 ▼</button>
+            <button class="country-btn">IND </button>
             <button class="contact-btn">Contact Us →</button>
           </div>
         </div>
