--- a/pages/career.html
+++ b/pages/career.html
@@ -23,7 +23,7 @@
 
         <div class="logo">
           <img src="../assets/images/logo.png" alt="logo" class="logo-icon" />
-          <h2>Yantrickaa</h2>
+          <h2>Dealintra</h2>
         </div>
 
         <ul class="nav-links" id="sidebar">
@@ -412,7 +412,7 @@
           </p>
 
           <div class="footer-buttons">
-            <button class="country-btn">IND 🇮🇳 ▼</button>
+            <button class="country-btn">IND </button>
             <button class="contact-btn">Contact Us</button>
           </div>
         </div>
