[ADD]: routing on footer contact button

--- a/pages/service.html
+++ b/pages/service.html
@@ -47,7 +47,7 @@
           We offer a comprehensive range of technology services to help your
           business thrive in the digital age.
         </p>
-        <a href="#" class="btn">Explore more</a>
+        <a href="upcoming.html" class="btn">Explore more</a>
       </div>
     </header>
 
@@ -484,7 +484,7 @@
           </ul>
         </div>
 
-        <div class="footer-contact">
+        <div class="footer-contact" id="contact">
           <h3>How can we assist you?</h3>
           <p>
             We value the opportunity to connect with you. Please submit your
@@ -493,8 +493,13 @@
           </p>
 
           <div class="footer-buttons">
-            <button class="country-btn">IND </button>
-            <button class="contact-btn">Contact Us →</button>
+            <button class="country-btn">IND</button>
+            <a
+              href="service.html#contact"
+              style="text-decoration: none"
+              class="contact-btn"
+              >Contact Us →</a
+            >
           </div>
         </div>
       </div>
