--- a/index.html
+++ b/index.html
@@ -341,7 +341,12 @@
 
           <div class="footer-buttons">
             <button class="country-btn">IND</button>
-            <button class="contact-btn">Contact Us →</button>
+            <a
+              href="/pages/product.html#contact"
+              style="text-decoration: none"
+              class="contact-btn"
+              >Contact Us →</a
+            >
           </div>
         </div>
       </div>
