--- a/pages/product.html
+++ b/pages/product.html
@@ -327,7 +327,7 @@
           </div>
         </div>
       </section>
-      <section style="padding: 40px 5%">
+      <section style="padding: 40px 5%" id="contact">
         <div class="contact-card">
           <div class="contact-text">
             <h3>Ready to discuss your project?</h3>
@@ -421,7 +421,8 @@
 
           <div class="footer-buttons">
             <button class="country-btn">IND </button>
-            <button class="contact-btn">Contact Us →</button>
+                        <a href="product.html#contact" style="text-decoration: none;" class="contact-btn">Contact Us →</a>
+
           </div>
         </div>
       </div>
