[fix]: service button contact routing

--- a/pages/service.html
+++ b/pages/service.html
@@ -404,7 +404,7 @@
           </div>
         </div>
 
-        <div class="contact-card">
+        <div class="contact-card" id="contact">
           <div class="contact-text">
             <h3>Ready to discuss your project?</h3>
             <p>
@@ -495,7 +495,7 @@
           <div class="footer-buttons">
             <button class="country-btn">IND</button>
             <a
-              href="service.html#contact"
+              href="#contact"
               style="text-decoration: none"
               class="contact-btn"
               >Contact Us →</a
