[add]: dyamica form rendering for career section

--- a/pages/career.html
+++ b/pages/career.html
@@ -58,7 +58,7 @@
       </div>
     </header>
     <main>
-      <section class="career-section">
+      <section class="career-section" id="careerCardsSection">
         <div class="career-header">
           <h2>Current Openings</h2>
           <button class="job-alert-btn">Create Job Alert 🔔</button>
@@ -84,7 +84,16 @@
               </li>
             </ul>
             <div class="card-footer">
-              <button class="apply-btn">Apply</button>
+              <button
+                class="apply-btn"
+                data-title="Full Stack Web Developer"
+                data-experience="0–2 Years."
+                data-skills="TypeScript, JavaScript, NodeJS"
+                data-location="Nagpur, India. (WFH)"
+              >
+                Apply
+              </button>
+
               <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
@@ -110,7 +119,16 @@
               </ul>
             </div>
             <div class="card-footer">
-              <button class="apply-btn">Apply</button>
+              <button
+                class="apply-btn"
+                data-title="Flutter Developer (Mobile)"
+                data-experience="0–2 Years."
+                data-skills="Flutter"
+                data-location="Nagpur, India. (WFH)"
+              >
+                Apply
+              </button>
+
               <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
@@ -136,7 +154,16 @@
               </li>
             </ul>
             <div class="card-footer">
-              <button class="apply-btn">Apply</button>
+              <button
+                class="apply-btn"
+                data-title="QA Full Stack Tester"
+                data-experience="0–2 Years."
+                data-skills="JavaScript, Playwright, API Testing"
+                data-location="Nagpur, India. (WFH)"
+              >
+                Apply
+              </button>
+
               <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
@@ -164,7 +191,16 @@
               </ul>
             </div>
             <div class="card-footer">
-              <button class="apply-btn">Apply</button>
+              <button
+                class="apply-btn"
+                data-title="Web Developer Intern"
+                data-experience="0–2 Years."
+                data-skills="TypeScript, JavaScript, NodeJS"
+                data-location="Nagpur, India. (WFH)"
+              >
+                Apply
+              </button>
+
               <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
@@ -190,7 +226,16 @@
               </ul>
             </div>
             <div class="card-footer">
-              <button class="apply-btn">Apply</button>
+              <button
+                class="apply-btn"
+                data-title="UI/UX & Graphics Designer"
+                data-experience="0–2 Years."
+                data-skills="UI/UX, Graphics Design, Figma"
+                data-location="Nagpur, India. (WFH)"
+              >
+                Apply
+              </button>
+
               <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
@@ -216,14 +261,27 @@
               </li>
             </ul>
             <div class="card-footer">
-              <button class="apply-btn">Apply</button>
+              <button
+                class="apply-btn"
+                data-title="Sales & Marketing"
+                data-experience="0–2 Years."
+                data-skills="Communication, Sales Strategy, Market Research"
+                data-location="Nagpur, India. (WFH)"
+              >
+                Apply
+              </button>
+
               <i class="fa-solid fa-arrow-right"></i>
             </div>
           </div>
         </div>
       </section>
       <hr />
-      <section class="career-apply-section">
+      <section
+        class="career-apply-section"
+        id="applySection"
+        style="display: none"
+      >
         <div class="job-title">
           <h2>Full Stack Web Developer at Dealintra <span>↗</span></h2>
           <div class="job-tags">
@@ -412,7 +470,7 @@
           </p>
 
           <div class="footer-buttons">
-            <button class="country-btn">IND </button>
+            <button class="country-btn">IND</button>
             <button class="contact-btn">Contact Us</button>
           </div>
         </div>
@@ -475,5 +533,6 @@
       </div>
     </footer>
     <script src="../js/main.js"></script>
+    <script src="../js/career.js"></script>
   </body>
 </html>
