[add]: sidbar menu on small screen

--- a/pages/career.html
+++ b/pages/career.html
@@ -532,6 +532,7 @@
         </div>
       </div>
     </footer>
+    <div class="overlay" id="overlay"></div>
     <script src="../js/main.js"></script>
     <script src="../js/career.js"></script>
   </body>
