--- a/pages/career.html
+++ b/pages/career.html
@@ -471,7 +471,12 @@
 
           <div class="footer-buttons">
             <button class="country-btn">IND</button>
-            <button class="contact-btn">Contact Us</button>
+            <a
+              href="product.html#contact"
+              style="text-decoration: none"
+              class="contact-btn"
+              >Contact Us →</a
+            >
           </div>
         </div>
       </div>
