[ADD]: routing on product cards

--- a/pages/product.html
+++ b/pages/product.html
@@ -74,7 +74,7 @@
               DPOS is Point of sale software that manages Staff, Inventory,
               Billing and Analytics.
             </p>
-            <a href="#" class="read-more">Read More ↗</a>
+            <a href="#pos" class="read-more">Read More ↗</a>
           </div>
 
           <!-- CARD 2 -->
@@ -88,7 +88,7 @@
               DPOS is Point of sale software that manages Staff, Inventory,
               Billing and Analytics.
             </p>
-            <a href="#" class="read-more">Read More ↗</a>
+            <a href="#db" class="read-more">Read More ↗</a>
           </div>
 
           <!-- CARD 3 -->
@@ -102,7 +102,7 @@
               DPOS is Point of sale software that manages Staff, Inventory,
               Billing and Analytics.
             </p>
-            <a href="#" class="read-more">Read More ↗</a>
+            <a href="#portal" class="read-more">Read More ↗</a>
           </div>
         </div>
       </section>
@@ -137,7 +137,7 @@
       </section>
 
       <!-- ================== Pos Section ================== -->
-      <section class="info-section">
+      <section class="info-section" id="pos">
         <div class="info-header">
           <div class="left">
             <div class="info-left-text">
@@ -190,7 +190,7 @@
       <div class="divider"></div>
       <!-- ================== DB Section ================== -->
 
-      <section class="info-section">
+      <section class="info-section" id="db">
         <div class="info-header">
           <div class="left">
             <div class="info-left-text">
@@ -255,7 +255,7 @@
 
       <!-- ================== Portal Section ================== -->
 
-      <section class="info-section">
+      <section class="info-section" id="portal">
         <div class="info-header">
           <div class="left">
             <div class="info-left-text">
