[ADD]: navigate to home page on logo clicked

--- a/pages/term-condition.html
+++ b/pages/term-condition.html
@@ -12,7 +12,7 @@
 
       <h2>1. Introduction</h2>
       <p>
-        Welcome to [Your Company Name] ("Company", "we", "our", "us"). These
+        Welcome to dealintra ("Company", "we", "our", "us"). These
         Terms and Conditions ("Terms") govern your access to and use of our
         website www.yourdomain.com, our software products, and related IT
         services (collectively referred to as the "Services"). By accessing or
