[UI-CHANGES]: as per requirement

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
             you can too.
           </p>
           <div class="buttons">
-            <a href="#" class="btn-outline">Dealintra Careers</a>
-            <a href="#" class="btn-fill">Explore</a>
+            <a href="pages/career.html" class="btn-outline">Dealintra Careers</a>
+            <a href="pages/career.html" class="btn-fill">Explore</a>
           </div>
         </div>
         <div class="career-image">
