--- a/pages/product.html
+++ b/pages/product.html
@@ -50,7 +50,7 @@
           We offer a comprehensive range of technology services to help your
           business thrive in the digital age.
         </p>
-        <a href="upcoming.html" class="btn transparent-btn">View video</a>
+        <a href="#contact" class="btn transparent-btn">Schedule Demo</a>
       </div>
     </header>
 
