--- a/pages/product.html
+++ b/pages/product.html
@@ -66,7 +66,10 @@
           <!-- CARD 1 -->
           <div class="product-card">
             <div class="product-img">
-              <img src="../assets/images/product/Dealinpos1.png" alt="DealinPOS Logo" />
+              <img
+                src="../assets/images/product/Dealinpos1.png"
+                alt="DealinPOS Logo"
+              />
             </div>
             <h3>DealintraPOS</h3>
             <p class="subtitle">POS & Restaurant Management System.</p>
@@ -80,7 +83,10 @@
           <!-- CARD 2 -->
           <div class="product-card">
             <div class="product-img">
-              <img src="../assets/images/product/Dealindb1.png" alt="DealinDB Logo" />
+              <img
+                src="../assets/images/product/Dealindb1.png"
+                alt="DealinDB Logo"
+              />
             </div>
             <h3>DealintraDB</h3>
             <p class="subtitle">Banking & Society Management System.</p>
@@ -94,7 +100,10 @@
           <!-- CARD 3 -->
           <div class="product-card">
             <div class="product-img">
-              <img src="../assets/images/product/portal1.png" alt="PortalLogo" />
+              <img
+                src="../assets/images/product/portal1.png"
+                alt="PortalLogo"
+              />
             </div>
             <h3>Portal</h3>
             <p class="subtitle">Internship Management System.</p>
@@ -109,28 +118,28 @@
       <section class="stats-section">
         <div class="stats-card">
           <div class="stat-item">
-            <h2>3</h2>
+            <h2><span id="enterprise"></span><span class="plus">+</span></h2>
             <p>Enterprise<br />Products</p>
           </div>
 
           <div class="stats-divider"></div>
 
           <div class="stat-item">
-            <h2>16+</h2>
+            <h2><span id="partners"></span><span class="plus">+</span></h2>
             <p>Partners<br />Worldwide</p>
           </div>
 
           <div class="stats-divider"></div>
 
           <div class="stat-item">
-            <h2>6+</h2>
+            <h2><span id="countris"></span><span class="plus">+</span></h2>
             <p>Countries<br />Served</p>
           </div>
 
           <div class="stats-divider"></div>
 
           <div class="stat-item">
-            <h2>2900+</h2>
+            <h2><span id="users"></span><span class="plus">+</span></h2>
             <p>Users<br />Onboarded</p>
           </div>
         </div>
@@ -372,7 +381,7 @@
               <option>USA</option>
               <option>UK</option>
             </select>
-            <select name="QueryType"  >
+            <select name="QueryType">
               <option>Select Query Type</option>
               <option>Development</option>
               <option>Design</option>
@@ -420,9 +429,13 @@
           </p>
 
           <div class="footer-buttons">
-            <button class="country-btn">IND </button>
-                        <a href="product.html#contact" style="text-decoration: none;" class="contact-btn">Contact Us →</a>
-
+            <button class="country-btn">IND</button>
+            <a
+              href="product.html#contact"
+              style="text-decoration: none"
+              class="contact-btn"
+              >Contact Us →</a
+            >
           </div>
         </div>
       </div>
@@ -484,7 +497,7 @@
       </div>
     </footer>
     <div class="overlay" id="overlay"></div>
-
+    <script src="../js/statsAnimation.js"></script>
     <script src="../js/main.js"></script>
   </body>
 </html>
