--- a/pages/service.html
+++ b/pages/service.html
@@ -47,7 +47,7 @@
           We offer a comprehensive range of technology services to help your
           business thrive in the digital age.
         </p>
-        <a href="upcoming.html" class="btn">Explore more</a>
+        <a href="#contact" class="btn">Get a Quote</a>
       </div>
     </header>
 
@@ -67,7 +67,7 @@
                 business challenges and requirements.
               </p>
               <div class="qa-btn">
-                <button>Inquire</button>
+                <button class="inquire-btn">Inquire</button>
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
             </div>
@@ -79,7 +79,7 @@
                 business challenges and requirements.
               </p>
               <div class="qa-btn">
-                <button>Inquire</button>
+                <button class="inquire-btn">Inquire</button>
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
             </div>
@@ -91,7 +91,7 @@
                 business challenges and requirements.
               </p>
               <div class="qa-btn">
-                <button>Inquire</button>
+                <button class="inquire-btn">Inquire</button>
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
             </div>
@@ -103,7 +103,7 @@
                 business challenges and requirements.
               </p>
               <div class="qa-btn">
-                <button>Inquire</button>
+                <button class="inquire-btn">Inquire</button>
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
             </div>
@@ -115,7 +115,7 @@
                 business challenges and requirements.
               </p>
               <div class="qa-btn">
-                <button>Inquire</button>
+                <button class="inquire-btn">Inquire</button>
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
             </div>
@@ -127,7 +127,7 @@
                 business challenges and requirements.
               </p>
               <div class="qa-btn">
-                <button>Inquire</button>
+                <button class="inquire-btn">Inquire</button>
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
             </div>
@@ -265,7 +265,7 @@
             </div>
             <div class="tech-item">
               <img
-                src="../assets/images/service/technology/"
+                src="../assets/images/service/technology/googleClaude.png"
                 alt="Google Cloud"
               />
             </div>
@@ -494,10 +494,7 @@
 
           <div class="footer-buttons">
             <button class="country-btn">IND</button>
-            <a
-              href="#contact"
-              style="text-decoration: none"
-              class="contact-btn"
+            <a href="#contact" style="text-decoration: none" class="contact-btn"
               >Contact Us →</a
             >
           </div>
@@ -561,7 +558,7 @@
       </div>
     </footer>
     <div class="overlay" id="overlay"></div>
-
+    <script src="../js/service.js"></script>
     <script src="../js/main.js"></script>
   </body>
 </html>
